--- a/packages/cli/Makefile
+++ b/packages/cli/Makefile
@@ -1,10 +1,13 @@
 
-dev:
-	go install
-	cd ~/Entwicklung/mono && nx run website:serve 2>&1 | uitail --web=false
+dev: install
+	cd ~/Entwicklung/mono && nx run website:serve 2>&1 | uitail
 
-build:
+ui:
+	rm -rf internal/static/dist
 	cd ../frontend && pnpm build && cp -r dist ../cli/internal/static/dist
-	cd ../cli
+
+build: ui
 	go build
 
+install: ui
+	go install
