--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -15,10 +15,13 @@
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@sinclair/typebox": "^0.32.35",
+    "@types/lodash": "^4.17.7",
+    "@types/lodash.throttle": "^4.1.9",
     "anser": "^2.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
+    "lodash.throttle": "^4.1.1",
     "lucide-react": "^0.414.0",
     "nanoid": "^5.0.7",
     "react": "^18.3.1",
