--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -14,6 +14,8 @@
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-toggle": "^1.1.0",
+    "@radix-ui/react-tooltip": "^1.1.2",
     "@sinclair/typebox": "^0.32.35",
     "@types/lodash": "^4.17.7",
     "@types/lodash.throttle": "^4.1.9",
