--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -27,6 +27,7 @@
     "lodash.throttle": "^4.1.1",
     "lucide-react": "^0.414.0",
     "nanoid": "^5.0.7",
+    "next-themes": "^0.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.1",
@@ -34,6 +35,7 @@
     "react-router-dom": "^6.25.1",
     "react-window": "^1.8.10",
     "recharts": "^2.12.7",
+    "sonner": "^1.5.0",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7"
   },
