--- a/packages/cli/.goreleaser.yaml
+++ b/packages/cli/.goreleaser.yaml
@@ -14,6 +14,8 @@ before:
 
 builds:
   - main: ./main.go
+    hooks:
+      pre: cd ../frontend && pnpm run build
     binary: uitail
     env:
       - CGO_ENABLED=0
