--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -7,8 +7,7 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview",
-    "pages:deploy-demo": "pnpm run build && sh ./injectCfConfig.sh && wrangler pages deploy dist"
+    "preview": "vite preview"
   },
   "dependencies": {
     "@radix-ui/react-checkbox": "^1.1.1",
@@ -37,8 +36,7 @@
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
-    "use-query-params": "^2.2.1",
-    "wrangler": "^3.80.1"
+    "use-query-params": "^2.2.1"
   },
   "devDependencies": {
     "@types/lodash.debounce": "^4.0.9",
